внес изменение в api чтобы он был более rest
